k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hims-kb
  labels:
    name: hims-kb
    app.kubernetes.io/name: hims-kb
